--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,12 @@
 
   --error-color: #f74646;
 
+  --lightTheme-itemsLEft: #9495a5;
+  --darkTheme-itemsLEft: #5b5e7e;
+
+  --lightTheme-filterHover: #494c6b;
+  --darkTheme-filterHover: #e3e4f1;
+
   --shadow: 0px 16px 30px -10px rgba(70, 96, 187, 0.198567);
 }
 
