--- a/src/components/Filters/Filters.module.scss
+++ b/src/components/Filters/Filters.module.scss
@@ -60,3 +60,32 @@
     color: var(--filters-hoverColor);
   }
 }
+
+@media (max-width: 576px) {
+  .filters {
+    width: 100%;
+    margin-top: 30px;
+    margin-bottom: 50px;
+
+    position: relative;
+    height: 100%;
+    overflow: visible;
+    padding: 10px 10px 10px 16px;
+    background-color: var(--todoList-bg);
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto auto;
+    justify-content: space-between;
+    row-gap: 35px;
+    column-gap: 24px;
+    align-items: center;
+    border-radius: 15px;
+    box-shadow: var(--shadowForElem);
+  }
+
+  .mainButtons {
+    justify-content: center;
+    grid-row: 2/3;
+    grid-column: 1/3;
+  }
+}
