--- a/src/components/NewTodo/NewTodo.module.scss
+++ b/src/components/NewTodo/NewTodo.module.scss
@@ -60,3 +60,22 @@
     outline: none;
   }
 }
+
+@media (max-width: 576px) {
+  .newTodo {
+    margin-top: 40px;
+    margin-bottom: 30px;
+    position: relative;
+    // width: 100%;
+    height: 64px;
+    overflow: visible;
+    padding: 10px 10px 10px 16px;
+    background-color: var(--newTodo-bg, white);
+    display: flex;
+    align-items: center;
+    border-radius: 15px;
+  }
+  .textField {
+    max-width: 100%;
+  }
+}
