--- a/src/components/TodoList/TodoList.module.scss
+++ b/src/components/TodoList/TodoList.module.scss
@@ -23,7 +23,6 @@
   margin-top: 15px;
   position: relative;
   width: 100%;
-  height: 64px;
   overflow: hidden;
   padding: 10px 10px 10px 16px;
   background-color: var(--todoList-bg, white);
@@ -49,7 +48,6 @@
   margin-top: 15px;
   position: relative;
   width: 100%;
-  height: 64px;
   overflow: hidden;
   padding: 10px 10px 10px 16px;
   background-color: var(--todoList-bg, white);
@@ -71,6 +69,9 @@
 
   cursor: pointer;
   background-color: var(--todoList-bg);
+
+  word-break: break-word;
+  overflow-wrap: break-word;
 }
 
 input[type="checkbox"] {
@@ -112,4 +113,35 @@ input[type="checkbox"] {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) rotate(45deg);
+}
+
+@media (max-width: 576px) {
+  .todoWrapper {
+    margin-top: 15px;
+    position: relative;
+    max-width: 100%;
+    height: 100%;
+    overflow: visible;
+    padding: 10px 10px 10px 16px;
+    background-color: var(--todoList-bg, white);
+    display: grid;
+    grid-template-columns: 25px auto 55px;
+    column-gap: 24px;
+    align-items: center;
+    border-radius: 15px;
+    box-shadow: var(--shadowForElem);
+
+    font-family: Josefin Sans, serif;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: -0.25px;
+    color: var(--todoList-color);
+    cursor: pointer;
+    background-color: var(--todoList-bg);
+
+    word-break: break-word;
+    overflow-wrap: break-word;
+  }
 }
